--- a/html/faqs/faqs.html
+++ b/html/faqs/faqs.html
@@ -4,55 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3DLabs</title>
+    <title>Goodfellas | FAQS</title>
+    <meta name="description" content="Esta seccion esta destinada a despejar dudas frecuentes">
+    <meta name="keywords" content="3D, IMPRESIONES, GOODFELLAS, CALIDAD, PREMIUM, CONTACTO, DUDAS, PREGUNTAS, FRECUENTES">
     <!-- CSS -->
-    <link rel="stylesheet" href="/styles/style_faqs.css">
-    <link rel="shortcut icon" href="img/logos/icon.png" type="Mi sitio">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="/img/logos/icon.png" type="Mi sitio">
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+   <!-- BOOTSTRAP -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
    <div class="contenedor">
        <!-- HEADER -->
-       <header class="header">
-           <nav class="menu">
-               <input type="checkbox" name="btn" id="btn_menu">
-               <label for="btn_menu" class="menu__hamb_icon">
-                   <img src="/img/logos/icon_men.png" alt="">
-                   <!-- <div id="hamburguesa">
-                       <button>
-                           <span class="top_line"></span>
-                           <span class="mid_line"></span>
-                           <span class="bot_line"></span>
-                       </button>
-                   </div> -->
-               </label>
-               <ul class="menu__lista"> 
-                   <li class="menu__link"><a href="/index.html">Inicio</a></li>
-                   <li class="menu__link"><a href="/index.html#productos">Productos</a></li>
-                   <li class="menu__link"><a href="/html/faqs/faqs.html">Info</a></li>
-                   <li class="menu__link"><a href="/html/contact/contact.html">Contacto</a></li>
-               </ul>
-           </nav>
-           <div class="logo"><a href="/index.html"><span>Goodfellas</span></a></div>
-           <div class="buscar"> 
-              <img src="/img/logos/icon_search.svg" alt="buscar" class="buscar__img"></div>
-       </header>
-       <script>
-           const nav = document.querySelector("#hamburguesa button");
-           nav.addEventListener("click", e => {
-               nav.classList.toggle("open");
-           });
-       </script>
+       <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark header__nav custom-nav">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="/index.html">Goodfellas</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Productos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="/html/categorias/marvel/marvel.html">Marvel</a></li>
+                    <li><a class="dropdown-item" href="#">DC</a></li>
+                    <li><a class="dropdown-item" href="#">StarWars</a></li>
+                    <li><a class="dropdown-item" href="#">POP</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/html/faqs/faqs.html">Info</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/html/contact/contact.html">Contacto</a>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
+    </header>
         <!-- MENU -->      
-        <div class="header__menu">
+        <div class="header__menu-faq">
             <h1>Preguntas Frecuentes</h1>
         </div>
         <!-- MAIN -->
-        <main class="main">
-            <section class="container">
+        <main class="main-faq">
+            <section class="container-faq">
                 <ul>
                     <li>
                         <h2>Pregunta</h2>
@@ -89,5 +97,8 @@
             </div>
         </footer>
     </div>
+     <!-- SCRIPTS -->
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     </body>
     </html>
