--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Goodfellas</title>
+     <meta name="description" content="Microemprendimiendo abocado a las impresiones 3D, pasate por nuestro catalogo y no dudes en consultarnos cualquier duda">
+     <meta name="keywords" content="3D, IMPRESIONES, MARVEL, DC, STAR WARS, POP, GAME, GOODFELLAS, CALIDAD, PREMIUM">
+     <title>Goodfellas | Home</title>
      <!-- CSS -->
-     <link rel="stylesheet" href="/styles/style.css">
+     <link rel="stylesheet" href="./css/style.css">
      <link rel="shortcut icon" href="img/logos/icon.png" type="Mi sitio">
      <!-- FONTS -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +19,8 @@
  </head>
  <body>
         <!-- HEADER -->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark header__nav">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark header__nav custom-nav">
                 <div class="container-fluid">
                 <a class="navbar-brand" href="/index.html">Goodfellas</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,6 +52,7 @@
                 </div>
                 </div>
             </nav>
+        </header>
         <!-- MAIN -->
         <main class="main">
             <div class="container">
@@ -105,7 +109,7 @@
                     </div>
                 </div>
             </section> 
-            <section id="productos">
+            <section id="productos bg-dark.bg-gradient">
                 <div class="productos__titulo">Productos</div>
                 <div class="productos__lista">
                     <div class="productos__grid-1">
